--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </table>
 <hr>
 <button type="button" name="button"><a href="https://www.youtube.com/channel/UCfs0uesySzCXUIXy5DHtVuA">subscribe</a> </button>
-<button type="button" name="button"> <a href="D:\Teacher Ata\John Vincent Coronica Yr10-1\Personal Website\contacts.html">Message me here</a> </button>
+<button type="button" name="button"> <a href="contacts.html">Message me here</a> </button>
 
 
   </body>
